--- a/src/main/resources/templates/field/reserve.html
+++ b/src/main/resources/templates/field/reserve.html
@@ -113,6 +113,9 @@
               </div>
             </div>
             <div class="mnd">
+	           	<input id="fNList" style="display :none" th:value="${fNList}">
+	       		<input id="latList" style="display :none" th:value="${latList}">
+	       		<input id="lonList" style="display :none" th:value="${lonList}">
                <div id="map_n" style="width: 300px; height: 300px; margin-left:80px; margin-top:10px;"></div>
                  <input id="fName" style="display:none" th:value="${field.fName}">
                  <div id="futsalDate" style="margin-left:400px; margin-top :-300px"></div>
