--- a/src/main/resources/static/css/infowindow.css
+++ b/src/main/resources/static/css/infowindow.css
@@ -9,3 +9,26 @@
     padding:0px 10px;
     width:max-content;
 }
+
+.overlaybox {position:absolute;width:max-content;height: max-content;padding:10px 5px; background-color: white; border: 1px solid black; border-radius: 5px}
+.overlaybox div, ul {overflow:hidden;margin:0;padding:0; width:max-content;height: max-content;}
+.overlaybox li {list-style: none; width:max-content;height: max-content;}
+.overlaybox .boxtitle {color:#fff;font-size:16px;font-weight:bold;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png') no-repeat right 120px center;margin-bottom:8px;}
+.overlaybox .first {position:relative;width:247px;height:136px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/thumb.png') no-repeat;margin-bottom:8px;}
+.first .text {color:#fff;font-weight:bold;}
+.first .triangle {position:absolute;width:48px;height:48px;top:0;left:0;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/triangle.png') no-repeat; padding:6px;font-size:18px;}
+.first .movietitle {position:absolute;width:100%;bottom:0;background:rgba(0,0,0,0.4);padding:7px 15px;font-size:14px;}
+.overlaybox ul {width:247px; width:max-content;height: max-content;}
+.overlaybox li {position:relative;margin-bottom:2px;padding:5px 10px;color:#aaabaf;line-height: 1;}
+/* .overlaybox li a {text-decoration: none; color: white} */
+.overlaybox li a {display:block;text-decoration:none;color:black;text-align:center;border-radius:6px;font-size:10px;font-weight:bold; width:max-content;height: max-content;}
+.overlaybox li a span {display:inline-block; width:max-content;height: max-content;}
+.overlaybox li a .number {font-size:16px;font-weight:bold;}
+.overlaybox li a .title {font-size:8px; width:max-content;height: max-content;}
+.overlaybox ul .arrow {position:absolute;margin-top:8px;right:25px;width:5px;height:3px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/updown.png') no-repeat;} 
+.overlaybox li a .up {background-position:0 -40px;}
+.overlaybox li a .down {background-position:0 -60px;}
+.overlaybox li a .count {position:absolute;margin-top:5px;right:15px;font-size:10px;}
+.overlaybox li:hover {background:#d24545;}
+.overlaybox li:hover .up {background-position:0 0px;}
+.overlaybox li:hover .down {background-position:0 -20px;}   
